@@ -42,6 +42,7 @@
 #include "gwenhywfar/logger.h"
 #include "ipc/ipc_p.h"
 #include "gwenhywfar/crypt.h"
+#include "gwenhywfar/process.h"
 
 
 static GWEN_LOGGER *gwen_default_logger=0;
@@ -83,6 +84,10 @@ GWEN_ERRORCODE GWEN_Init() {
     err=GWEN_Crypt_ModuleInit();
     if (!GWEN_Error_IsOk(err))
       return err;
+    DBG_DEBUG(0, "Initializing Process module");
+    err=GWEN_Process_ModuleInit();
+    if (!GWEN_Error_IsOk(err))
+      return err;
     /* add here more modules */
 
   }
@@ -105,12 +110,20 @@ GWEN_ERRORCODE GWEN_Fini() {
   gwen_is_initialized--;
   if (gwen_is_initialized==0) {
     /* add here more modules */
+    if (!GWEN_Error_IsOk(GWEN_Process_ModuleFini())) {
+      err=GWEN_Error_new(0,
+                         GWEN_ERROR_SEVERITY_ERR,
+                         0,
+                         GWEN_ERROR_COULD_NOT_UNREGISTER);
+      DBG_ERROR(0, "GWEN_Fini: "
+                "Could not deinitialze module Process");
+    }
     if (!GWEN_Error_IsOk(GWEN_Crypt_ModuleFini())) {
       err=GWEN_Error_new(0,
                          GWEN_ERROR_SEVERITY_ERR,
                          0,
                          GWEN_ERROR_COULD_NOT_UNREGISTER);
-      DBG_ERROR(0, "GWEN__Fini: "
+      DBG_ERROR(0, "GWEN_Fini: "
                 "Could not deinitialze module Crypt");
     }
     if (!GWEN_Error_IsOk(GWEN_IPC_ModuleFini())) {
@@ -118,7 +131,7 @@ GWEN_ERRORCODE GWEN_Fini() {
                          GWEN_ERROR_SEVERITY_ERR,
                          0,
                          GWEN_ERROR_COULD_NOT_UNREGISTER);
-      DBG_ERROR(0, "GWEN__Fini: "
+      DBG_ERROR(0, "GWEN_Fini: "
                 "Could not deinitialze module IPC");
     }
     if (!GWEN_Error_IsOk(GWEN_BufferedIO_ModuleFini())) {
@@ -126,7 +139,7 @@ GWEN_ERRORCODE GWEN_Fini() {
                          GWEN_ERROR_SEVERITY_ERR,
                          0,
                          GWEN_ERROR_COULD_NOT_UNREGISTER);
-      DBG_ERROR(0, "GWEN__Fini: "
+      DBG_ERROR(0, "GWEN_Fini: "
                 "Could not deinitialze module BufferedIO");
     }
     if (!GWEN_Error_IsOk(GWEN_LibLoader_ModuleFini())) {
